--- a/components.json
+++ b/components.json
@@ -4,7 +4,7 @@
   "tailwind": {
     "config": "tailwind.config.js",
     "css": "src/app.css",
-    "baseColor": "slate"
+    "baseColor": "stone"
   },
   "aliases": {
     "components": "$lib/components",
