--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write ."
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write ."
   },
   "devDependencies": {
     "@originjs/vite-plugin-commonjs": "^1.0.3",
@@ -23,11 +23,13 @@
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-svelte": "^2.30.0",
     "postcss": "^8.4.31",
-    "prettier": "^2.8.0",
-    "prettier-plugin-svelte": "^2.10.1",
+    "prettier": "^3.3.2",
+    "prettier-plugin-svelte": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.6.4",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
     "svelte-headless-table": "^0.17.7",
@@ -38,6 +40,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@badgateway/oauth2-client": "^2.3.0",
     "@lucia-auth/adapter-sqlite": "^2.0.1",
     "better-sqlite3": "^9.2.2",
     "bits-ui": "^0.9.9",
@@ -45,11 +48,11 @@
     "cmdk-sv": "^0.0.12",
     "jsbarcode": "^3.11.5",
     "lucia": "^2.7.6",
-    "lucide-svelte": "^0.292.0",
+    "lucide-svelte": "^0.395.0",
     "node-html-parser": "^6.1.11",
-    "parkrun.js": "^2.0.1",
     "tailwind-merge": "^2.0.0",
     "tailwind-variants": "^0.1.18",
-    "vaul-svelte": "^0.0.6"
+    "vaul-svelte": "^0.0.6",
+    "vite-plugin-commonjs": "^0.10.1"
   }
 }
