--- a/package.json
+++ b/package.json
@@ -41,15 +41,16 @@
   "type": "module",
   "dependencies": {
     "@badgateway/oauth2-client": "^2.3.0",
-    "@lucia-auth/adapter-sqlite": "^2.0.1",
+    "@lucia-auth/adapter-sqlite": "^3.0.1",
     "better-sqlite3": "^9.2.2",
     "bits-ui": "^0.9.9",
     "clsx": "^2.0.0",
     "cmdk-sv": "^0.0.12",
     "jsbarcode": "^3.11.5",
-    "lucia": "^2.7.6",
+    "lucia": "^3.2.0",
     "lucide-svelte": "^0.395.0",
     "node-html-parser": "^6.1.11",
+    "oslo": "^1.2.0",
     "tailwind-merge": "^2.0.0",
     "tailwind-variants": "^0.1.18",
     "vaul-svelte": "^0.0.6",
