--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^2.1.1",
-    "@sveltejs/adapter-node": "^1.3.1",
-    "@sveltejs/kit": "^1.30.4",
+    "@sveltejs/adapter-node": "^2.0.0",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/typography": "^0.5.10",
     "@types/better-sqlite3": "^7.6.8",
@@ -35,7 +35,7 @@
     "tailwindcss": "^3.4.15",
     "tslib": "^2.4.1",
     "typescript": "^5.7.2",
-    "vite": "^4.5.5"
+    "vite": "^5.0.0"
   },
   "type": "module",
   "dependencies": {
